# astage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
astage/: __init__.py  actor.py  actor_handle.py  handler_decorator.py
astage/_internal/: internal.py
examples/: e01_hello_astage.py  e02_astage_and_pydantic.py  e03_passing_typed_actor_handle.py
tests/: smoke_test.py  test_actor.py  test_actor_pydantic.py  test_stop_vs_kill_actor.py
