[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astage"
version = "0.1.0"
description = "Async model actor library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/olaals/astage"
Repository = "https://github.com/olaals/astage"
"Issue Tracker" = "https://github.com/olaals/astage/issues"


[dependency-groups]
dev = [
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = ["."]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
